# crossword-grid-extraction

./: .gitignore  CLAUDE.md  LIBRARY_USAGE.md  README.md  pyproject.toml  pytest.ini  visualizer.sh
docs/: ASPECT_RATIO_VALIDATION.md  CROSSWORD2_ANALYSIS.md  DEPLOYMENT_OPTIONS.md  DIMENSION_DETECTION_FIX.md  DOT_DETECTION_FEATURE.md  LIBRARY_USAGE.md  MCP_INTEGRATION.md  MCP_SERVER.md  QUICK_START.md  QUICK_START_SYSTEMD.md  README.md  SHADOW_HANDLING.md  SYSTEMD_DEPLOYMENT.md  VISUALIZER.md
examples/: README.md  claude_desktop_config.json  example_usage.py  usage_example.py
src/: crossword.py  extract.py  mcp_server.py  utils.py  visualizer.glade  visualizer.py  visualizer.ui  visualizer_gtk4.py  visualizer_gtk4.sh  visualizer_gtk4.ui
systemd/: crossword-mcp.service  install.sh
test_data/: README.md  nyt1_result.txt  nyt2_result.txt
testing/: lista.txt
tests/: README.md  __init__.py  conftest.py  test_crossword.py  test_mcp_server.py
